# BlackholeSim

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.sh  compile_commands.json  debug_output2.txt
docs/: FactoryPatternImplementation.md
examples/: factory_usage_examples.cpp
include/: BlackHoleSonification.h  KerrPhysics.h  LightSystem.h  MelodiousCalculator.h  PerformanceLogger.h  Physics.h  PhysicsFactory.h  RayTracer.h  RelativisticJets.h  Renderer.h  Shader.h
shaders/: blackhole.frag  blackhole_optimized.frag  ui.frag
src/: BlackHoleSonification.cpp  KerrPhysics.cpp  LightSystem.cpp  MelodiousCalculator.cpp  PerformanceLogger.cpp  Physics.cpp  PhysicsFactory.cpp  RayTracer.cpp  RelativisticJets.cpp  Renderer.cpp  Shader.cpp  main.cpp
